[package]
name = "embassy-stm32f3-sd-dfu-example"
version = "0.1.0"
edition = "2024"

[dependencies]

panic-reset = { version = "0.1.1" }


cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-sdmmc = {git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs" ,rev = "8a2bf647cdf7de7cf84b63a0d79e8106e03f1bae"} #switch to main
stm32f3xx-hal = {version = "0.10.0", features = ["ld","rt","stm32f303xc"]}

